WIP: Added AI generated unit tests, still need to add more for corner cases and happy path. Got it compiling/running, and 2 test failures (From AI generated tests) where the tests are incorrect (will be fixed).